@@ -6,6 +6,13 @@ section are the standard options.  Any of these options could be removed, or
 new options added, by build system extensions including project-specific
 :file:`project.py` files.
 
+The build tools can also be invoked using the ``-m`` command line option of the
+Python interpreter.  For example, the following two command lines are
+equivalent::
+
+    sip-build -h
+    python -m sipbuild.tools.build -h
+
 
 :program:`sip-build`
 --------------------
